lab4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> struct
Rule 2     start -> start struct
Rule 3     block -> { block_interior }
Rule 4     struct -> expr ;
Rule 5     struct -> instruction ;
Rule 6     struct -> cond_expr
Rule 7     struct -> block
Rule 8     block_interior -> struct
Rule 9     block_interior -> block_interior struct
Rule 10    loop_block -> { loop_block_interior }
Rule 11    loop_struct -> loop_single_stmt ;
Rule 12    loop_struct -> loop_cond_expr
Rule 13    loop_struct -> loop_block
Rule 14    loop_block_interior -> loop_block_interior expr ;
Rule 15    loop_block_interior -> loop_block_interior loop_instruction ;
Rule 16    loop_block_interior -> loop_block_interior loop_cond_expr
Rule 17    loop_block_interior -> expr ;
Rule 18    loop_block_interior -> loop_instruction ;
Rule 19    loop_block_interior -> loop_cond_expr
Rule 20    loop_single_stmt -> loop_instruction
Rule 21    loop_single_stmt -> assignment
Rule 22    expr -> INTNUM
Rule 23    expr -> FLOATNUM
Rule 24    expr -> STRING
Rule 25    expr -> ZEROS ( expr )
Rule 26    expr -> ONES ( expr )
Rule 27    expr -> EYE ( expr )
Rule 28    expr -> lvalue
Rule 29    expr -> ( expr )
Rule 30    expr -> - expr
Rule 31    expr -> expr '
Rule 32    array_interior -> array_interior , expr
Rule 33    array_interior -> expr
Rule 34    range -> expr : expr
Rule 35    expr -> [ array_interior ]
Rule 36    lvalue -> ID
Rule 37    lvalue -> ID [ array_interior ]
Rule 38    lvalue -> ID [ range ]
Rule 39    assignment -> lvalue = expr
Rule 40    assignment -> lvalue PLUSASSIGN expr
Rule 41    assignment -> lvalue MINASSIGN expr
Rule 42    assignment -> lvalue MULTASSIGN expr
Rule 43    assignment -> lvalue DIVASSIGN expr
Rule 44    expr -> assignment
Rule 45    expr -> expr + expr
Rule 46    expr -> expr - expr
Rule 47    expr -> expr * expr
Rule 48    expr -> expr / expr
Rule 49    expr -> expr MPLUS expr
Rule 50    expr -> expr MMINUS expr
Rule 51    expr -> expr MMLTP expr
Rule 52    expr -> expr MDIV expr
Rule 53    expr -> expr EQ expr
Rule 54    expr -> expr NEQ expr
Rule 55    expr -> expr GTEQ expr
Rule 56    expr -> expr LTEQ expr
Rule 57    expr -> expr > expr
Rule 58    expr -> expr < expr
Rule 59    cond_expr -> cond_if
Rule 60    cond_expr -> cond_while
Rule 61    cond_expr -> cond_for
Rule 62    cond_if -> IF ( expr ) struct
Rule 63    cond_if -> IF ( expr ) struct ELSE struct
Rule 64    loop_cond_expr -> loop_cond_if
Rule 65    loop_cond_expr -> cond_while
Rule 66    loop_cond_expr -> cond_for
Rule 67    loop_cond_if -> IF ( expr ) loop_struct
Rule 68    loop_cond_if -> IF ( expr ) loop_struct ELSE loop_struct
Rule 69    cond_while -> WHILE ( expr ) loop_struct
Rule 70    cond_for -> FOR lvalue = range loop_struct
Rule 71    instruction -> RETURN expr
Rule 72    instruction -> PRINT array_interior
Rule 73    loop_instruction -> BREAK
Rule 74    loop_instruction -> CONTINUE
Rule 75    loop_instruction -> instruction

Terminals, with rules where they appear

'                    : 31
(                    : 25 26 27 29 62 63 67 68 69
)                    : 25 26 27 29 62 63 67 68 69
*                    : 47
+                    : 45
,                    : 32
-                    : 30 46
/                    : 48
:                    : 34
;                    : 4 5 11 14 15 17 18
<                    : 58
=                    : 39 70
>                    : 57
BREAK                : 73
CONTINUE             : 74
DIVASSIGN            : 43
ELSE                 : 63 68
EQ                   : 53
EYE                  : 27
FLOATNUM             : 23
FOR                  : 70
GTEQ                 : 55
ID                   : 36 37 38
IF                   : 62 63 67 68
INTNUM               : 22
LTEQ                 : 56
MDIV                 : 52
MINASSIGN            : 41
MMINUS               : 50
MMLTP                : 51
MPLUS                : 49
MULTASSIGN           : 42
NEQ                  : 54
ONES                 : 26
PLUSASSIGN           : 40
PRINT                : 72
RETURN               : 71
STRING               : 24
WHILE                : 69
ZEROS                : 25
[                    : 35 37 38
]                    : 35 37 38
error                : 
{                    : 3 10
}                    : 3 10

Nonterminals, with rules where they appear

array_interior       : 32 35 37 72
assignment           : 21 44
block                : 7
block_interior       : 3 9
cond_expr            : 6
cond_for             : 61 66
cond_if              : 59
cond_while           : 60 65
expr                 : 4 14 17 25 26 27 29 30 31 32 33 34 34 39 40 41 42 43 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 62 63 67 68 69 71
instruction          : 5 75
loop_block           : 13
loop_block_interior  : 10 14 15 16
loop_cond_expr       : 12 16 19
loop_cond_if         : 64
loop_instruction     : 15 18 20
loop_single_stmt     : 11
loop_struct          : 67 68 68 69 70
lvalue               : 28 39 40 41 42 43 70
range                : 38 70
start                : 2 0
struct               : 1 2 8 9 62 63 63

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . struct
    (2) start -> . start struct
    (4) struct -> . expr ;
    (5) struct -> . instruction ;
    (6) struct -> . cond_expr
    (7) struct -> . block
    (22) expr -> . INTNUM
    (23) expr -> . FLOATNUM
    (24) expr -> . STRING
    (25) expr -> . ZEROS ( expr )
    (26) expr -> . ONES ( expr )
    (27) expr -> . EYE ( expr )
    (28) expr -> . lvalue
    (29) expr -> . ( expr )
    (30) expr -> . - expr
    (31) expr -> . expr '
    (35) expr -> . [ array_interior ]
    (44) expr -> . assignment
    (45) expr -> . expr + expr
    (46) expr -> . expr - expr
    (47) expr -> . expr * expr
    (48) expr -> . expr / expr
    (49) expr -> . expr MPLUS expr
    (50) expr -> . expr MMINUS expr
    (51) expr -> . expr MMLTP expr
    (52) expr -> . expr MDIV expr
    (53) expr -> . expr EQ expr
    (54) expr -> . expr NEQ expr
    (55) expr -> . expr GTEQ expr
    (56) expr -> . expr LTEQ expr
    (57) expr -> . expr > expr
    (58) expr -> . expr < expr
    (71) instruction -> . RETURN expr
    (72) instruction -> . PRINT array_interior
    (59) cond_expr -> . cond_if
    (60) cond_expr -> . cond_while
    (61) cond_expr -> . cond_for
    (3) block -> . { block_interior }
    (36) lvalue -> . ID
    (37) lvalue -> . ID [ array_interior ]
    (38) lvalue -> . ID [ range ]
    (39) assignment -> . lvalue = expr
    (40) assignment -> . lvalue PLUSASSIGN expr
    (41) assignment -> . lvalue MINASSIGN expr
    (42) assignment -> . lvalue MULTASSIGN expr
    (43) assignment -> . lvalue DIVASSIGN expr
    (62) cond_if -> . IF ( expr ) struct
    (63) cond_if -> . IF ( expr ) struct ELSE struct
    (69) cond_while -> . WHILE ( expr ) loop_struct
    (70) cond_for -> . FOR lvalue = range loop_struct

    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    ZEROS           shift and go to state 10
    ONES            shift and go to state 12
    EYE             shift and go to state 13
    (               shift and go to state 11
    -               shift and go to state 15
    [               shift and go to state 16
    RETURN          shift and go to state 18
    PRINT           shift and go to state 19
    {               shift and go to state 23
    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27

    start                          shift and go to state 1
    struct                         shift and go to state 2
    expr                           shift and go to state 3
    instruction                    shift and go to state 4
    cond_expr                      shift and go to state 5
    block                          shift and go to state 6
    lvalue                         shift and go to state 14
    assignment                     shift and go to state 17
    cond_if                        shift and go to state 20
    cond_while                     shift and go to state 21
    cond_for                       shift and go to state 22

state 1

    (0) S' -> start .
    (2) start -> start . struct
    (4) struct -> . expr ;
    (5) struct -> . instruction ;
    (6) struct -> . cond_expr
    (7) struct -> . block
    (22) expr -> . INTNUM
    (23) expr -> . FLOATNUM
    (24) expr -> . STRING
    (25) expr -> . ZEROS ( expr )
    (26) expr -> . ONES ( expr )
    (27) expr -> . EYE ( expr )
    (28) expr -> . lvalue
    (29) expr -> . ( expr )
    (30) expr -> . - expr
    (31) expr -> . expr '
    (35) expr -> . [ array_interior ]
    (44) expr -> . assignment
    (45) expr -> . expr + expr
    (46) expr -> . expr - expr
    (47) expr -> . expr * expr
    (48) expr -> . expr / expr
    (49) expr -> . expr MPLUS expr
    (50) expr -> . expr MMINUS expr
    (51) expr -> . expr MMLTP expr
    (52) expr -> . expr MDIV expr
    (53) expr -> . expr EQ expr
    (54) expr -> . expr NEQ expr
    (55) expr -> . expr GTEQ expr
    (56) expr -> . expr LTEQ expr
    (57) expr -> . expr > expr
    (58) expr -> . expr < expr
    (71) instruction -> . RETURN expr
    (72) instruction -> . PRINT array_interior
    (59) cond_expr -> . cond_if
    (60) cond_expr -> . cond_while
    (61) cond_expr -> . cond_for
    (3) block -> . { block_interior }
    (36) lvalue -> . ID
    (37) lvalue -> . ID [ array_interior ]
    (38) lvalue -> . ID [ range ]
    (39) assignment -> . lvalue = expr
    (40) assignment -> . lvalue PLUSASSIGN expr
    (41) assignment -> . lvalue MINASSIGN expr
    (42) assignment -> . lvalue MULTASSIGN expr
    (43) assignment -> . lvalue DIVASSIGN expr
    (62) cond_if -> . IF ( expr ) struct
    (63) cond_if -> . IF ( expr ) struct ELSE struct
    (69) cond_while -> . WHILE ( expr ) loop_struct
    (70) cond_for -> . FOR lvalue = range loop_struct

    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    ZEROS           shift and go to state 10
    ONES            shift and go to state 12
    EYE             shift and go to state 13
    (               shift and go to state 11
    -               shift and go to state 15
    [               shift and go to state 16
    RETURN          shift and go to state 18
    PRINT           shift and go to state 19
    {               shift and go to state 23
    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27

    struct                         shift and go to state 28
    expr                           shift and go to state 3
    instruction                    shift and go to state 4
    cond_expr                      shift and go to state 5
    block                          shift and go to state 6
    lvalue                         shift and go to state 14
    assignment                     shift and go to state 17
    cond_if                        shift and go to state 20
    cond_while                     shift and go to state 21
    cond_for                       shift and go to state 22

state 2

    (1) start -> struct .

    INTNUM          reduce using rule 1 (start -> struct .)
    FLOATNUM        reduce using rule 1 (start -> struct .)
    STRING          reduce using rule 1 (start -> struct .)
    ZEROS           reduce using rule 1 (start -> struct .)
    ONES            reduce using rule 1 (start -> struct .)
    EYE             reduce using rule 1 (start -> struct .)
    (               reduce using rule 1 (start -> struct .)
    -               reduce using rule 1 (start -> struct .)
    [               reduce using rule 1 (start -> struct .)
    RETURN          reduce using rule 1 (start -> struct .)
    PRINT           reduce using rule 1 (start -> struct .)
    {               reduce using rule 1 (start -> struct .)
    ID              reduce using rule 1 (start -> struct .)
    IF              reduce using rule 1 (start -> struct .)
    WHILE           reduce using rule 1 (start -> struct .)
    FOR             reduce using rule 1 (start -> struct .)
    $end            reduce using rule 1 (start -> struct .)


state 3

    (4) struct -> expr . ;
    (31) expr -> expr . '
    (45) expr -> expr . + expr
    (46) expr -> expr . - expr
    (47) expr -> expr . * expr
    (48) expr -> expr . / expr
    (49) expr -> expr . MPLUS expr
    (50) expr -> expr . MMINUS expr
    (51) expr -> expr . MMLTP expr
    (52) expr -> expr . MDIV expr
    (53) expr -> expr . EQ expr
    (54) expr -> expr . NEQ expr
    (55) expr -> expr . GTEQ expr
    (56) expr -> expr . LTEQ expr
    (57) expr -> expr . > expr
    (58) expr -> expr . < expr

    ;               shift and go to state 29
    '               shift and go to state 30
    +               shift and go to state 31
    -               shift and go to state 32
    *               shift and go to state 33
    /               shift and go to state 34
    MPLUS           shift and go to state 35
    MMINUS          shift and go to state 36
    MMLTP           shift and go to state 37
    MDIV            shift and go to state 38
    EQ              shift and go to state 39
    NEQ             shift and go to state 40
    GTEQ            shift and go to state 41
    LTEQ            shift and go to state 42
    >               shift and go to state 43
    <               shift and go to state 44


state 4

    (5) struct -> instruction . ;

    ;               shift and go to state 45


state 5

    (6) struct -> cond_expr .

    INTNUM          reduce using rule 6 (struct -> cond_expr .)
    FLOATNUM        reduce using rule 6 (struct -> cond_expr .)
    STRING          reduce using rule 6 (struct -> cond_expr .)
    ZEROS           reduce using rule 6 (struct -> cond_expr .)
    ONES            reduce using rule 6 (struct -> cond_expr .)
    EYE             reduce using rule 6 (struct -> cond_expr .)
    (               reduce using rule 6 (struct -> cond_expr .)
    -               reduce using rule 6 (struct -> cond_expr .)
    [               reduce using rule 6 (struct -> cond_expr .)
    RETURN          reduce using rule 6 (struct -> cond_expr .)
    PRINT           reduce using rule 6 (struct -> cond_expr .)
    {               reduce using rule 6 (struct -> cond_expr .)
    ID              reduce using rule 6 (struct -> cond_expr .)
    IF              reduce using rule 6 (struct -> cond_expr .)
    WHILE           reduce using rule 6 (struct -> cond_expr .)
    FOR             reduce using rule 6 (struct -> cond_expr .)
    $end            reduce using rule 6 (struct -> cond_expr .)
    }               reduce using rule 6 (struct -> cond_expr .)
    ELSE            reduce using rule 6 (struct -> cond_expr .)


state 6

    (7) struct -> block .

    INTNUM          reduce using rule 7 (struct -> block .)
    FLOATNUM        reduce using rule 7 (struct -> block .)
    STRING          reduce using rule 7 (struct -> block .)
    ZEROS           reduce using rule 7 (struct -> block .)
    ONES            reduce using rule 7 (struct -> block .)
    EYE             reduce using rule 7 (struct -> block .)
    (               reduce using rule 7 (struct -> block .)
    -               reduce using rule 7 (struct -> block .)
    [               reduce using rule 7 (struct -> block .)
    RETURN          reduce using rule 7 (struct -> block .)
    PRINT           reduce using rule 7 (struct -> block .)
    {               reduce using rule 7 (struct -> block .)
    ID              reduce using rule 7 (struct -> block .)
    IF              reduce using rule 7 (struct -> block .)
    WHILE           reduce using rule 7 (struct -> block .)
    FOR             reduce using rule 7 (struct -> block .)
    $end            reduce using rule 7 (struct -> block .)
    }               reduce using rule 7 (struct -> block .)
    ELSE            reduce using rule 7 (struct -> block .)


state 7

    (22) expr -> INTNUM .

    ;               reduce using rule 22 (expr -> INTNUM .)
    '               reduce using rule 22 (expr -> INTNUM .)
    +               reduce using rule 22 (expr -> INTNUM .)
    -               reduce using rule 22 (expr -> INTNUM .)
    *               reduce using rule 22 (expr -> INTNUM .)
    /               reduce using rule 22 (expr -> INTNUM .)
    MPLUS           reduce using rule 22 (expr -> INTNUM .)
    MMINUS          reduce using rule 22 (expr -> INTNUM .)
    MMLTP           reduce using rule 22 (expr -> INTNUM .)
    MDIV            reduce using rule 22 (expr -> INTNUM .)
    EQ              reduce using rule 22 (expr -> INTNUM .)
    NEQ             reduce using rule 22 (expr -> INTNUM .)
    GTEQ            reduce using rule 22 (expr -> INTNUM .)
    LTEQ            reduce using rule 22 (expr -> INTNUM .)
    >               reduce using rule 22 (expr -> INTNUM .)
    <               reduce using rule 22 (expr -> INTNUM .)
    )               reduce using rule 22 (expr -> INTNUM .)
    ]               reduce using rule 22 (expr -> INTNUM .)
    ,               reduce using rule 22 (expr -> INTNUM .)
    :               reduce using rule 22 (expr -> INTNUM .)
    {               reduce using rule 22 (expr -> INTNUM .)
    BREAK           reduce using rule 22 (expr -> INTNUM .)
    CONTINUE        reduce using rule 22 (expr -> INTNUM .)
    IF              reduce using rule 22 (expr -> INTNUM .)
    WHILE           reduce using rule 22 (expr -> INTNUM .)
    FOR             reduce using rule 22 (expr -> INTNUM .)
    RETURN          reduce using rule 22 (expr -> INTNUM .)
    PRINT           reduce using rule 22 (expr -> INTNUM .)
    ID              reduce using rule 22 (expr -> INTNUM .)


state 8

    (23) expr -> FLOATNUM .

    ;               reduce using rule 23 (expr -> FLOATNUM .)
    '               reduce using rule 23 (expr -> FLOATNUM .)
    +               reduce using rule 23 (expr -> FLOATNUM .)
    -               reduce using rule 23 (expr -> FLOATNUM .)
    *               reduce using rule 23 (expr -> FLOATNUM .)
    /               reduce using rule 23 (expr -> FLOATNUM .)
    MPLUS           reduce using rule 23 (expr -> FLOATNUM .)
    MMINUS          reduce using rule 23 (expr -> FLOATNUM .)
    MMLTP           reduce using rule 23 (expr -> FLOATNUM .)
    MDIV            reduce using rule 23 (expr -> FLOATNUM .)
    EQ              reduce using rule 23 (expr -> FLOATNUM .)
    NEQ             reduce using rule 23 (expr -> FLOATNUM .)
    GTEQ            reduce using rule 23 (expr -> FLOATNUM .)
    LTEQ            reduce using rule 23 (expr -> FLOATNUM .)
    >               reduce using rule 23 (expr -> FLOATNUM .)
    <               reduce using rule 23 (expr -> FLOATNUM .)
    )               reduce using rule 23 (expr -> FLOATNUM .)
    ]               reduce using rule 23 (expr -> FLOATNUM .)
    ,               reduce using rule 23 (expr -> FLOATNUM .)
    :               reduce using rule 23 (expr -> FLOATNUM .)
    {               reduce using rule 23 (expr -> FLOATNUM .)
    BREAK           reduce using rule 23 (expr -> FLOATNUM .)
    CONTINUE        reduce using rule 23 (expr -> FLOATNUM .)
    IF              reduce using rule 23 (expr -> FLOATNUM .)
    WHILE           reduce using rule 23 (expr -> FLOATNUM .)
    FOR             reduce using rule 23 (expr -> FLOATNUM .)
    RETURN          reduce using rule 23 (expr -> FLOATNUM .)
    PRINT           reduce using rule 23 (expr -> FLOATNUM .)
    ID              reduce using rule 23 (expr -> FLOATNUM .)


state 9

    (24) expr -> STRING .

    ;               reduce using rule 24 (expr -> STRING .)
    '               reduce using rule 24 (expr -> STRING .)
    +               reduce using rule 24 (expr -> STRING .)
    -               reduce using rule 24 (expr -> STRING .)
    *               reduce using rule 24 (expr -> STRING .)
    /               reduce using rule 24 (expr -> STRING .)
    MPLUS           reduce using rule 24 (expr -> STRING .)
    MMINUS          reduce using rule 24 (expr -> STRING .)
    MMLTP           reduce using rule 24 (expr -> STRING .)
    MDIV            reduce using rule 24 (expr -> STRING .)
    EQ              reduce using rule 24 (expr -> STRING .)
    NEQ             reduce using rule 24 (expr -> STRING .)
    GTEQ            reduce using rule 24 (expr -> STRING .)
    LTEQ            reduce using rule 24 (expr -> STRING .)
    >               reduce using rule 24 (expr -> STRING .)
    <               reduce using rule 24 (expr -> STRING .)
    )               reduce using rule 24 (expr -> STRING .)
    ]               reduce using rule 24 (expr -> STRING .)
    ,               reduce using rule 24 (expr -> STRING .)
    :               reduce using rule 24 (expr -> STRING .)
    {               reduce using rule 24 (expr -> STRING .)
    BREAK           reduce using rule 24 (expr -> STRING .)
    CONTINUE        reduce using rule 24 (expr -> STRING .)
    IF              reduce using rule 24 (expr -> STRING .)
    WHILE           reduce using rule 24 (expr -> STRING .)
    FOR             reduce using rule 24 (expr -> STRING .)
    RETURN          reduce using rule 24 (expr -> STRING .)
    PRINT           reduce using rule 24 (expr -> STRING .)
    ID              reduce using rule 24 (expr -> STRING .)


state 10

    (25) expr -> ZEROS . ( expr )

    (               shift and go to state 46


state 11

    (29) expr -> ( . expr )
    (22) expr -> . INTNUM
    (23) expr -> . FLOATNUM
    (24) expr -> . STRING
    (25) expr -> . ZEROS ( expr )
    (26) expr -> . ONES ( expr )
    (27) expr -> . EYE ( expr )
    (28) expr -> . lvalue
    (29) expr -> . ( expr )
    (30) expr -> . - expr
    (31) expr -> . expr '
    (35) expr -> . [ array_interior ]
    (44) expr -> . assignment
    (45) expr -> . expr + expr
    (46) expr -> . expr - expr
    (47) expr -> . expr * expr
    (48) expr -> . expr / expr
    (49) expr -> . expr MPLUS expr
    (50) expr -> . expr MMINUS expr
    (51) expr -> . expr MMLTP expr
    (52) expr -> . expr MDIV expr
    (53) expr -> . expr EQ expr
    (54) expr -> . expr NEQ expr
    (55) expr -> . expr GTEQ expr
    (56) expr -> . expr LTEQ expr
    (57) expr -> . expr > expr
    (58) expr -> . expr < expr
    (36) lvalue -> . ID
    (37) lvalue -> . ID [ array_interior ]
    (38) lvalue -> . ID [ range ]
    (39) assignment -> . lvalue = expr
    (40) assignment -> . lvalue PLUSASSIGN expr
    (41) assignment -> . lvalue MINASSIGN expr
    (42) assignment -> . lvalue MULTASSIGN expr
    (43) assignment -> . lvalue DIVASSIGN expr

    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    ZEROS           shift and go to state 10
    ONES            shift and go to state 12
    EYE             shift and go to state 13
    (               shift and go to state 11
    -               shift and go to state 15
    [               shift and go to state 16
    ID              shift and go to state 24

    expr                           shift and go to state 47
    lvalue                         shift and go to state 14
    assignment                     shift and go to state 17

state 12

    (26) expr -> ONES . ( expr )

    (               shift and go to state 48


state 13

    (27) expr -> EYE . ( expr )

    (               shift and go to state 49


state 14

    (28) expr -> lvalue .
    (39) assignment -> lvalue . = expr
    (40) assignment -> lvalue . PLUSASSIGN expr
    (41) assignment -> lvalue . MINASSIGN expr
    (42) assignment -> lvalue . MULTASSIGN expr
    (43) assignment -> lvalue . DIVASSIGN expr

    ;               reduce using rule 28 (expr -> lvalue .)
    '               reduce using rule 28 (expr -> lvalue .)
    +               reduce using rule 28 (expr -> lvalue .)
    -               reduce using rule 28 (expr -> lvalue .)
    *               reduce using rule 28 (expr -> lvalue .)
    /               reduce using rule 28 (expr -> lvalue .)
    MPLUS           reduce using rule 28 (expr -> lvalue .)
    MMINUS          reduce using rule 28 (expr -> lvalue .)
    MMLTP           reduce using rule 28 (expr -> lvalue .)
    MDIV            reduce using rule 28 (expr -> lvalue .)
    EQ              reduce using rule 28 (expr -> lvalue .)
    NEQ             reduce using rule 28 (expr -> lvalue .)
    GTEQ            reduce using rule 28 (expr -> lvalue .)
    LTEQ            reduce using rule 28 (expr -> lvalue .)
    >               reduce using rule 28 (expr -> lvalue .)
    <               reduce using rule 28 (expr -> lvalue .)
    )               reduce using rule 28 (expr -> lvalue .)
    ]               reduce using rule 28 (expr -> lvalue .)
    ,               reduce using rule 28 (expr -> lvalue .)
    :               reduce using rule 28 (expr -> lvalue .)
    {               reduce using rule 28 (expr -> lvalue .)
    BREAK           reduce using rule 28 (expr -> lvalue .)
    CONTINUE        reduce using rule 28 (expr -> lvalue .)
    IF              reduce using rule 28 (expr -> lvalue .)
    WHILE           reduce using rule 28 (expr -> lvalue .)
    FOR             reduce using rule 28 (expr -> lvalue .)
    RETURN          reduce using rule 28 (expr -> lvalue .)
    PRINT           reduce using rule 28 (expr -> lvalue .)
    ID              reduce using rule 28 (expr -> lvalue .)
    =               shift and go to state 50
    PLUSASSIGN      shift and go to state 51
    MINASSIGN       shift and go to state 52
    MULTASSIGN      shift and go to state 53
    DIVASSIGN       shift and go to state 54


state 15
